# alicia_server

./: .clang-format  .gitignore  .gitmodules  :wq:ㅈㅂ  CMakeLists.txt  LICENSE  README.md  bullied.json
include/libserver/: Alicia.hpp  Util.hpp  alicia.hpp  mapping.hpp  util.hpp
include/libserver/base/: Server.hpp  database.hpp  server.hpp
include/libserver/chatter/: ChatterServer.hpp  chatter_server.hpp
include/libserver/command/: CommandProtocol.hpp  CommandServer.hpp  command_protocol.hpp  command_server.hpp
include/libserver/command/lobby/: messages.hpp
include/libserver/command/proto/: DataDefines.hpp  LobbyMessageDefines.hpp  RanchMessageDefines.hpp
include/libserver/command/ranch/: messages.hpp
include/libserver/proto/: lobby.hpp  proto.hpp  server.hpp  util.hpp
include/libserver/proto/lobby/: messages.hpp
include/server/: DataDirector.hpp  Scheduler.hpp  Settings.hpp  Version.hpp.in
include/server/lobby/: LobbyDirector.hpp  LoginHandler.hpp
include/server/ranch/: DataDirector.hpp  RanchDirector.hpp
include/server/tracker/: WorldTracker.hpp
resources/: bullied.json  settings.json
src/: alicia.cpp  main.cpp
src/include/: alicia.hpp
src/libserver/: Alicia.cpp  Util.cpp  alicia.cpp  mapping.cpp  util.cpp
src/libserver/base/: Server.cpp  server.cpp
src/libserver/command/: CommandProtocol.cpp  CommandServer.cpp  command_protocol.cpp  command_server.cpp
src/libserver/command/lobby/: messages.cpp
src/libserver/command/proto/: LobbyMessageDefines.cpp  RanchMessageDefines.cpp
src/libserver/command/ranch/: messages.cpp
src/libserver/proto/: lobby.cpp  proto.cpp  server.cpp  util.cpp
src/libserver/proto/lobby/: messages.cpp
src/libserver/proto/ranch/: messages.cpp
src/server/: DataDirector.cpp  Director.hpp  LobbyDirector.cpp  Settings.cpp  main.cpp
src/server/lobby/: LobbyDirector.cpp  LobbyDirector.hpp  LoginHandler.cpp
src/server/ranch/: RanchDirector.cpp  RanchDirector.hpp
src/server/tracker/: WorldTracker.cpp
tests/: CMakeLists.txt  test.cpp  test_magic.cpp  test_packet.cpp
tests/src/: TestBuffers.cpp  TestMagic.cpp
